<resources>
    <string name="app_name">TinT</string>

    <string name="filter_name1">메이크업</string>
    <string name="filter_name2">헤어</string>
    <string name="filter_name3">패션</string>
    <string name="filter_name4">네일</string>
    <string name="filter_name5">다이어트</string>
    <string name="title_activity_feed_item">feed_item</string>

    <string name="login_id_hint">아이디(이메일)</string>
    <string name="login_pw_hint">비밀번호</string>

    <string name="register_id_hint">아이디(이메일)</string>
    <string name="register_pw_hint">비밀번호(6자리 이상)</string>
    <string name="register_name_hint">이름</string>
    <string name="register_status_hint">상태 메시지</string>

    <string name="title">제목</string>
    <string name="subtitle">소제목</string>
    <string name="post_content">여기에 내용을 입력하세요.</string>
    <string name="sign_in">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="submit">등록</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="feed_empty_text1">조건에 맞는 게시물을 찾을 수 없어요</string>
    <string name="feed_empty_text2">첫 번째 게시물을 업로드 해보세요</string>
    <string name="feed_empty_text3">업로드한 게시물이 없어요</string>
    <string name="feed_empty_text4">저장한 게시물이 없어요</string>
</resources>