<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <HorizontalScrollView
            android:id="@+id/scrollView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtitleText">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleLine="true">

                <com.github.okdroid.checkablechipview.CheckableChipView
                    android:id="@+id/chip1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/backgroundColorPrimary"
                    android:color="@color/gray"
                    android:text="@string/filter_name1"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="16sp"
                    app:ccv_checkedTextColor="@color/white"
                    app:ccv_outlineColor="@color/gray" />

                <com.github.okdroid.checkablechipview.CheckableChipView
                    android:id="@+id/chip2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/backgroundColorPrimary"
                    android:color="@color/gray"
                    android:text="@string/filter_name2"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="16sp"
                    app:ccv_checkedTextColor="@color/white"
                    app:ccv_outlineColor="@color/gray" />

                <com.github.okdroid.checkablechipview.CheckableChipView
                    android:id="@+id/chip3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/backgroundColorPrimary"
                    android:color="@color/gray"
                    android:text="@string/filter_name3"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="16sp"
                    app:ccv_checkedTextColor="@color/white"
                    app:ccv_outlineColor="@color/gray" />

                <com.github.okdroid.checkablechipview.CheckableChipView
                    android:id="@+id/chip4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/backgroundColorPrimary"
                    android:color="@color/gray"
                    android:text="@string/filter_name4"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="16sp"
                    app:ccv_checkedTextColor="@color/white"
                    app:ccv_outlineColor="@color/gray" />

                <com.github.okdroid.checkablechipview.CheckableChipView
                    android:id="@+id/chip5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/backgroundColorPrimary"
                    android:color="@color/gray"
                    android:text="@string/filter_name5"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="16sp"
                    app:ccv_checkedTextColor="@color/white"
                    app:ccv_outlineColor="@color/gray" />

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

        <EditText
            android:id="@+id/titleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:textSize="32sp"
            android:textColor="@color/textColorPrimary"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/subtitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@android:color/transparent"
            android:ems="30"
            android:hint="@string/subtitle"
            android:inputType="textPersonName"
            android:textSize="16sp"
            android:textColor="@color/textColorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleText" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:fillViewport="false"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view">

            <LinearLayout
                android:id="@+id/selected_image_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="24dp"
                android:animateLayoutChanges="true"
                android:orientation="vertical"
                android:visibility="visible">

                <!-- Images wil be added here -->

            </LinearLayout>
        </HorizontalScrollView>


        <EditText
            android:id="@+id/contentText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="@android:color/transparent"
            android:hint="@string/post_content"
            android:inputType="textMultiLine"
            android:textColor="@color/textColorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

        <Button
            android:id="@+id/postBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_state_background"
            android:enabled="false"
            android:text="등록"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contentText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>